# VpnProxyServer

./: .gitignore  ARCHITECTURE.md  CHANGES_SUMMARY.md  CRASH_FIX.md  EINTR_FIX.md  HARMONY_SOCKET_FIX_SUMMARY.md  NETWORK_ENVIRONMENT.md  NETWORK_TROUBLESHOOTING.md  PERMISSION_FIX.md  PERMISSION_ISSUE_FIXED.md  QUICK_FIX_GUIDE.md  QUICK_START.md  README.md  README_TCP_FIX.md  REFACTORING_COMPLETE.md  ROUTING_LOOP_FIX.md  START_HERE.md  STATUS.md  SUCCESS_AND_NEXT_STEPS.md  TCP_CONNECTION_FIX.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  build-profile.json5  build.cmd  check_permission.cmd  clean.cmd  harmony_socket_official.cpp  harmony_socket_test.cpp  raw_socket_proxy.cpp  uninstall_reinstall.cmd  代理服务器队列和重传机制.md  代理转发架构说明.md  网络诊断说明.txt  重构设计文档.md  队列重传机制BUG修复总结.md  鸿蒙PC网络问题解决方案.txt
.hvigor/cache/: file-cache.json  task-cache.json
.hvigor/dependencyMap/: dependencyMap.json5
.hvigor/outputs/build-logs/: build.log.1  build.log.2  build.log.3  build.log.4  build.log.5  build.log.6
.hvigor/outputs/logs/details/: details.json
.hvigor/outputs/sync/: fileCache.json  output.json
.hvigor/report/: report-202601141114098990.json  report-202601141115349510.json  report-202601141118061280.json  report-202601141120171040.json  report-202601141121490150.json  report-202601141122390440.json  report-202601141123312540.json  report-202601141125026050.json  report-202601141126593370.json  report-202601141155116030.json
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: build-profile.json5
entry/src/main/: module.json5
entry/src/main/cpp/: ARCHITECTURE_COMPARISON.md  CMakeLists.txt  CMakeLists_minimal.txt  CMakeLists_simple.txt  README_MINIMAL.md  README_SIMPLE.md  REFACTORING_SUMMARY.md  dns_cache.cpp  dns_cache.h  nat_connection_manager.cpp  nat_connection_manager.h  nat_optimization.cpp  nat_table.cpp  nat_table.h  network_diagnostics.cpp  network_diagnostics.h  packet_builder.cpp  packet_builder.h  packet_forwarder.cpp  packet_forwarder.cpp.backup  packet_forwarder.h  packet_forwarder_backup.cpp  packet_forwarder_final.cpp  packet_forwarder_fixed.cpp  packet_forwarder_simple.cpp  packet_forwarder_simple_v2.cpp  packet_forwarder_ultra_simple.cpp  protocol_handler.cpp  protocol_handler.h  simple_dns_cache.cpp  simple_dns_cache.h  task_queue.cpp  task_queue.h  thread_pool.cpp  thread_pool.h  thread_pool_config.h  thread_pool_example.cpp  thread_safe_queue.h  traffic_stats.h  udp_retransmit.cpp  (+8 more)
entry/src/main/cpp/types/libvpn_server/: index.d.ts
entry/src/main/ets/pages/: Index.ets
entry/src/main/ets/types/: libvpn_server.d.ts
entry/src/main/resources/base/element/: string.json
entry/src/main/resources/base/profile/: network_security_config.json
新架构/: CMakeLists.txt  README.md  config-example.json  main.cpp  迁移计划.md
新架构/core/: Config.h  EventLoop.h  VpnServer.cpp  VpnServer.h
新架构/forwarding/: NATTable.h
新架构/resource/: ThreadPool.h
